--- a/style.css
+++ b/style.css
@@ -300,7 +300,14 @@ article img {
   border-radius: 100%;
   margin-left: 22.5px;
   margin-right: 22.5px;
+  width: 19%;
 }
+
+@media (max-width: 800px) {
+  img {
+    display: none;
+  }
+} 
 
 .sec-1 {
   height: 830px;
